去除JDK1.5中的SUN相关jar，引入apache得codec